자바 8 문법 수정